Now correctly overflows and added tripDisplay component that's in progress

--- a/frontend/carpool-app/src/pages/Profile.scss
+++ b/frontend/carpool-app/src/pages/Profile.scss
@@ -3,6 +3,7 @@
 .profile-container{
     @include display-flex-center('justify');
     width: 100%;
+    overflow-y: auto;
     
     .profile-contents{
         @include display-flex-center('both');
@@ -16,6 +17,7 @@
         }
         ion-item{
             width: 100%;
+            margin-bottom: 1rem;
         }
     }
 
